fix form not centered

--- a/stactic/css/styles.css
+++ b/stactic/css/styles.css
@@ -144,13 +144,14 @@ footer{
 }
 
 .signup-form{
-    left:10%;
     color: #fff;
     background-color: rgba(0,0,0,.6);  
-    max-width:400px;
-    position:absolute;
     padding:30px;
     border-radius: 10px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-49%, -49%);
 }
 
 .text-input {
@@ -182,28 +183,18 @@ footer{
 }
 
 .successful-form{
-    margin:30vh 10% 0 0;
     color: #fff;
     background-color: rgba(0,0,0,.6);  
-    max-width:400px;
-    position:absolute;
-    left:15%;
-    right:5%;
-    padding:30px 30px 30px 50px;
+    padding:30px 30px 30px 30px;
     border-radius: 10px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-49%, -49%);
 }
 
 /* For screens sizes from 414px wide and up */
 @media screen and (min-width: 414px){
-    .signup-form{
-        margin:30vh 10% 0 0;
-    }
-    .successful-form{
-        left:20%;
-        right:2%;
-        max-width:390px;
-        margin:30vh 18% 0 0;
-    }
 
     #history h1{
         font-size: 2vh;
@@ -221,18 +212,6 @@ footer{
 
     nav a{
         font-size:2vh;
-    }
-
-    .signup-form{
-        left: 15%;
-    }
-
-    .successful-form{
-        top:20%;
-        left:38%;
-        max-width:390px;
-        margin:30vh 30% 0 0;
-        padding:30px 10px 30px 40px;
     }
 
     #sign-up-body{
@@ -274,10 +253,6 @@ footer{
     #history h1{
         font-size: 2.2vh;
         margin-right: 51%;
-    }
-
-    .signup-form{
-        margin:30vh 10% 0 50vh;
     }
 
     header img{
